big overhaul of html and css. Fixed collapsing problems

--- a/theme.css
+++ b/theme.css
@@ -9,15 +9,16 @@ header {
   margin-bottom: 5px;
 }
 
-.top.menu {
+header nav {
   background: grey;
   width: 100%;
   height: 50px;
+  padding-bottom: 20px;
   top: 0;
   padding-top: 20px;
 }
 
-.top.menu li {
+nav ul li {
   display: inline-block;
   font-size: 20px;
 
@@ -29,11 +30,18 @@ section {
   
 }
 
+figure {margin-bottom: 10px;}
+
 ul {
   list-style-type: none;
 }
 
- li:nth-child(1) {
+section ul li {
+  font-size: 100%;
+  display: block;
+}
+
+section ul li:nth-child(1) {
   font: 150% arial bold; 
 }
 
@@ -45,17 +53,21 @@ a:hover {
   color: red;
 }
 
-div.bears {
+.full {
  float: left;
- width: 20%;
+ width: 80%;
  margin-right: 2%;
-
 }
-div.blog
-{float: left;
-width: 20%;}
 
-.title {
+article {clear:both;}
+
+.bear {float: left;
+margin-right: 10px;}
+.blog {float: left;
+  width: 50%;
+}
+
+h3 {
   margin-bottom: 1px;
   font: 150% bold;
 }
